--- a/web_client/src/assets/styles/views/layout/main.scss
+++ b/web_client/src/assets/styles/views/layout/main.scss
@@ -145,6 +145,7 @@
 }
 
 .cta-sect {
+  position: relative;
   display: flex;
   padding: 10px;
   justify-content: center;
@@ -153,14 +154,14 @@
   > button {
     display: flex;
     margin: 5px;
-    padding: 10px 25px;
+    padding: 8px 20px;
     align-items: center;
     justify-content: center;
     background: #13bde7a1;
     border-radius: 20px;
     border: none;
     box-shadow: 0 0 1.5px 1px gray;
-    font-size: 1.1em;
+    font-size: 1.3em;
     cursor: pointer;
     outline: none;
     filter: brightness(1.2);
@@ -203,7 +204,7 @@
       }
     }
 
-    > :last-child {
+    > div:last-child {
       display: flex;
       flex-flow: column;
       align-items: flex-start;
@@ -229,31 +230,6 @@
         cursor: context-menu;
       }
     }
-  }
-}
-
-.poem-post-dialog {
-  position: fixed;
-  display: flex;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  background: #b7cec5bb;
-  z-index: 50;
-  overflow: auto;
-  overscroll-behavior: none;
-  scroll-behavior: smooth;
-
-  > div {
-    padding: 10px;
-    border-radius: 15px;
-    min-height: 150px;
-    background: #fff;
   }
 }
 
