--- a/web_client/src/assets/styles/views/settings/edit_profile.scss
+++ b/web_client/src/assets/styles/views/settings/edit_profile.scss
@@ -1,3 +1,4 @@
+@use "../../globals";
 
 .profile-photo {
   display: flex;
@@ -12,7 +13,7 @@
     height: 100px;
     margin-right: 10px;
     border-radius: 50%;
-    border: 2px solid gray;
+    border: 2px solid globals.$primary-color-lighter;
 
     > img {
       position: absolute;
