Add theme colours

--- a/web_client/src/assets/styles/globals.scss
+++ b/web_client/src/assets/styles/globals.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-$primary-color: #6bd39f;
+$primary-color: #9b1fee;
+$primary-color-light: #ab4beb;
+$primary-color-lighter: #b775e4;
+$primary-color-lightest: #d1a0f1;
+$danger-color: #f12652;
+$danger-color-light: #f34a6f;
 $Sans-Serif-Font: 'Quicksand', sans-serif;
 $Serif-Font: 'Lora', serif;
