Update modal dialog styles

--- a/web_client/src/assets/styles/globals.scss
+++ b/web_client/src/assets/styles/globals.scss
@@ -6,5 +6,7 @@ $primary-color-lighter: #b775e4;
 $primary-color-lightest: #d1a0f1;
 $danger-color: #f12652;
 $danger-color-light: #f34a6f;
+$modal-dialog-background: #646060a8;
+$shadow-color: #dcdcdcc4;
 $Sans-Serif-Font: 'Quicksand', sans-serif;
 $Serif-Font: 'Lora', serif;
