--- a/web_client/src/assets/styles/views/profile.scss
+++ b/web_client/src/assets/styles/views/profile.scss
@@ -1,3 +1,4 @@
+@use "@/assets/styles/globals";
 
 .user-profile {
   > .profile-info {
@@ -14,17 +15,17 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          width: calc(100px + 10px);
-          height: calc(100px + 10px);
+          width: calc(120px + 2 * 2px);
+          height: calc(120px + 2 * 2px);
           margin-right: 10px;
-          border: 3px solid #00ff73;
+          border: 2px solid globals.$primary-color;
           border-radius: 50%;
           outline: none;
           cursor: pointer;
 
           img {
             position: absolute;
-            width: calc(100% - 2 * 10px);
+            border-radius: 50%;
             z-index: 5;
           }
 
@@ -33,24 +34,6 @@
             width: 80%;
             height: 80%;
             z-index: 1;
-          }
-        }
-
-        > .account-action-btn {
-          border: 2px solid gainsboro;
-          border-radius: 10px;
-          cursor: pointer;
-
-          &.edit {
-            background: ghostwhite;
-          }
-
-          &.follow {
-            background: #46d398;
-          }
-
-          &.unfollow {
-            background: #e03f0d;
           }
         }
       }
@@ -93,7 +76,7 @@
       }
 
       > .bio-sect{
-        padding: 10px;
+        padding: 5px 10px 0 10px;
       }
     }
   }
