Update poem view style

--- a/web_client/src/assets/styles/views/poem.scss
+++ b/web_client/src/assets/styles/views/poem.scss
@@ -1,8 +1,14 @@
+@use "@/assets/styles/globals";
 
 .loading-pane {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 20px;
+  background: gainsboro;
+}
+
+.poem-comment-sect-divider {
+  height: 10px;
   background: gainsboro;
 }
