Update button styles

--- a/web_client/src/assets/styles/buttons.scss
+++ b/web_client/src/assets/styles/buttons.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   margin: 2px;
   border: 1px solid transparent;
+  background: none;
   text-decoration: none;
   cursor: pointer;
   outline: none;
