--- a/web_client/src/assets/styles/views/auth.scss
+++ b/web_client/src/assets/styles/views/auth.scss
@@ -29,9 +29,10 @@
     width: clamp(120px, 80%, 400px);
     padding: 10px;
     border-radius: 10px;
-    border: 2px groove globals.$primary-color;
-    background: white;
+    border: 2px groove globals.$primary-color-light;
+    background: ghostwhite;
     box-shadow: 0 0 1.5px 1.5px globals.$primary-color-lighter;
+    cursor: context-menu;
 
     h2 {
       font-size: 1em;
@@ -41,6 +42,20 @@
       align-items: center;
       justify-content: flex-end;
       padding: 5px;
+    }
+  }
+
+  .auth-link {
+    color: black;
+    border-bottom: 2px solid globals.$primary-color-lighter;
+    font-weight: 500;
+    text-decoration: none;
+    cursor: pointer;
+    outline: none;
+
+    &:hover {
+      color: globals.$primary-color;
+      border-bottom: 2px solid globals.$primary-color;
     }
   }
 }
