Update guest home page style

--- a/web_client/src/assets/styles/views/guest_home.scss
+++ b/web_client/src/assets/styles/views/guest_home.scss
@@ -63,6 +63,16 @@
     h4 {
       font-size: 0.6em;
     }
+
+    a.alt-link {
+      color: globals.$primary-color-lighter;
+      text-decoration: none;
+
+      &:hover {
+        color: globals.$primary-color;
+        text-decoration: 1px solid underline globals.$primary-color-light;
+      }
+    }
   }
 }
 
