--- a/web_client/src/assets/styles/textboxes.scss
+++ b/web_client/src/assets/styles/textboxes.scss
@@ -55,8 +55,8 @@
 }
 
 .cdp-txb {
-  width: calc(100% - 2 * 5px);
-  padding: 5px;
+  width: calc(100% - 2 * 10px);
+  padding: 5px 10px;
   border-radius: 10px;
   border: 2px solid gainsboro;
   outline: none;
