--- a/web_client/src/assets/styles/views/layout/context_menu.scss
+++ b/web_client/src/assets/styles/views/layout/context_menu.scss
@@ -22,6 +22,7 @@
       padding: 5px;
       color: black;
       background: none;
+      font-weight: 600;
       border: none;
       white-space: nowrap;
       text-decoration: none;
