--- a/web_client/src/assets/styles/components/comment.scss
+++ b/web_client/src/assets/styles/components/comment.scss
@@ -17,7 +17,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        // width: 25px;
+        font-weight: 600;
         padding: 2px;
         border: 2px solid globals.$primary-color-light;
         border-radius: 50%;
@@ -31,6 +31,7 @@
 
     > div:nth-child(2) {
       > a {
+        font-weight: 600;
         text-decoration: none;
         white-space: nowrap;
         overflow: auto;
