--- a/web_client/src/assets/styles/components/poem.scss
+++ b/web_client/src/assets/styles/components/poem.scss
@@ -35,6 +35,7 @@
             justify-content: center;
             padding: 2px;
             color: black;
+            font-weight: 600;
             border: 2px solid globals.$primary-color-lighter;
             border-radius: 50%;
 
@@ -48,6 +49,7 @@
         > div:nth-child(2) {
           > a {
             color: black;
+            font-weight: 600;
             text-decoration: none;
             white-space: nowrap;
             overflow: auto;
