--- a/web_client/src/assets/styles/components/user_item.scss
+++ b/web_client/src/assets/styles/components/user_item.scss
@@ -28,6 +28,7 @@
       padding: 2px;
       width: calc(30px + 2 * 2px);
       height: calc(30px + 2 * 2px);
+      font-weight: 600;
       border: 2px solid globals.$primary-color-light;
       border-radius: 50%;
 
@@ -43,11 +44,12 @@
 
   > div:nth-child(2) {
     > a {
+      color: black;
+      font-weight: 600;
       text-decoration: none;
       white-space: nowrap;
       overflow: auto;
       text-overflow: ellipsis;
-      color: black;
     }
   }
 
