--- a/web_client/src/assets/styles/views/layout/context_menu.scss
+++ b/web_client/src/assets/styles/views/layout/context_menu.scss
@@ -8,7 +8,7 @@
   display: none;
   padding: 5px 0;
   border-radius: 4px;
-  border: 1px solid gray;
+  border: 1px solid gainsboro;
   background: ghostwhite;
   z-index: 700;
   box-shadow: 0 0 2px 1.5px #a3a3a3dc;
@@ -19,9 +19,12 @@
 
     .menu-item {
       display: flex;
+      box-sizing: border-box;
       padding: 5px;
+      width: calc(100%);
       color: black;
       background: none;
+      font-size: 14px;
       font-weight: 600;
       border: none;
       white-space: nowrap;
