--- a/web_client/src/assets/styles/views/layout/tabs.scss
+++ b/web_client/src/assets/styles/views/layout/tabs.scss
@@ -9,8 +9,10 @@
 
     > .tab-btn {
       position: relative;
-      width: calc(100%);
+      width: 100%;
       height: 100%;
+      font-size: 16px;
+      font-weight: 600;
       border: none;
       border-radius: 0;
       background: none;
@@ -31,10 +33,12 @@
 
       &:hover {
         background: gainsboro;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
       }
     }
   }
   > .tab-content {
-    border-top: 2px solid gray;
+    border-top: 2px solid gainsboro;
   }
 }
