--- a/web_client/src/assets/styles/views/layout/main.scss
+++ b/web_client/src/assets/styles/views/layout/main.scss
@@ -1,4 +1,5 @@
 @use "@/assets/styles/globals";
+@use "@/assets/styles/views/search";
 
 .main-layout {
   display: grid;
@@ -89,46 +90,24 @@
 
   > .right-pane {
     position: sticky;
-    display: flex;
+    // display: flex;
     top: 0;
     height: inherit;
     grid-area: right;
     overflow: auto;
 
     > div {
-      height: 100%;
-      width: 100%;
-
-      > .search {
-        display: grid;
-        padding: 5px;
-        column-gap: 2px;
-        grid-template-columns: 1fr auto;
-        align-items: center;
-
-        > input {
-          padding: 5px 10px;
-          border-radius: 20px;
-          border: 2px solid gainsboro;
-          min-width: 50px;
-          outline: none;
-
-          &:focus {
-            border: 2px solid globals.$primary-color-lighter;
-          }
-        }
-
-        &.hidden {
-          display: none;
-        }
-      }
+      width: calc(100% - 2 * 10px);
+      padding: 0 10px;
 
       > .info {
-        padding: 10px 5px;
+        position: relative;
+        padding: 20px 0;
         * {
           display: flex;
           color: black;
           text-decoration: none;
+          outline: none;
         }
 
         a {
