--- a/web_client/src/assets/styles/components/comment.scss
+++ b/web_client/src/assets/styles/components/comment.scss
@@ -14,28 +14,46 @@
 
     > div:nth-child(1) {
       > a {
+        position: relative;
         display: flex;
         align-items: center;
         justify-content: center;
+        box-sizing: content-box;
+        padding: 0.5px;
+        width: 38px;
+        height: 38px;
+        color: black;
         font-weight: 600;
-        padding: 2px;
-        border: 2px solid globals.$primary-color-light;
+        border: 1px solid globals.$primary-color-lighter;
         border-radius: 50%;
 
-        > svg {
-          width: 30px;
-          height: 30px;
+        img {
+          position: absolute;
+          border-radius: 50%;
+          z-index: 5;
+        }
+
+        svg {
+          position: absolute;
+          width: 80%;
+          height: 80%;
+          z-index: 1;
         }
       }
     }
 
     > div:nth-child(2) {
       > a {
+        color: black;
         font-weight: 600;
         text-decoration: none;
         white-space: nowrap;
         overflow: auto;
         text-overflow: ellipsis;
+
+        &:hover {
+          color: globals.$primary-color-light;
+        }
       }
     }
 
