--- a/web_client/src/assets/styles/components/poem.scss
+++ b/web_client/src/assets/styles/components/poem.scss
@@ -33,15 +33,26 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 2px;
+            box-sizing: content-box;
+            padding: 0.5px;
+            width: 38px;
+            height: 38px;
             color: black;
             font-weight: 600;
-            border: 2px solid globals.$primary-color-lighter;
+            border: 1px solid globals.$primary-color-lighter;
             border-radius: 50%;
 
-            > svg {
-              width: 30px;
-              height: 30px;
+            img {
+              position: absolute;
+              border-radius: 50%;
+              z-index: 5;
+            }
+
+            svg {
+              position: absolute;
+              width: 80%;
+              height: 80%;
+              z-index: 1;
             }
           }
         }
@@ -54,6 +65,10 @@
             white-space: nowrap;
             overflow: auto;
             text-overflow: ellipsis;
+
+            &:hover {
+              color: globals.$primary-color-light;
+            }
           }
         }
 
