--- a/web_client/src/assets/styles/globals.scss
+++ b/web_client/src/assets/styles/globals.scss
@@ -6,6 +6,7 @@ $primary-color-lighter: #b775e4;
 $primary-color-lightest: #d1a0f1;
 $danger-color: #f12652;
 $danger-color-light: #f34a6f;
+$warning-color: #eedf10;
 $modal-dialog-background: #646060a8;
 $shadow-color: #dcdcdcc4;
 $Sans-Serif-Font: 'Quicksand', sans-serif;
