--- a/web_client/src/assets/styles/components/comment.scss
+++ b/web_client/src/assets/styles/components/comment.scss
@@ -7,6 +7,7 @@
 
   > .heading {
     display: grid;
+    padding: 5px;
     grid-template-columns: auto 1fr auto;
     align-items: center;
     justify-content: center;
