--- a/web_client/src/assets/styles/components/poem.scss
+++ b/web_client/src/assets/styles/components/poem.scss
@@ -10,6 +10,8 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  transition-property: background;
+  transition-duration: 300ms;
 
   > div {
     flex-flow: column;
@@ -22,6 +24,7 @@
 
       &.header {
         display: grid;
+        padding: 5px;
         grid-template-columns: auto 1fr auto;
         align-items: center;
         justify-content: center;
@@ -273,7 +276,7 @@
 
         > div {
           display: flex;
-          widtH: 100%;
+          width: 100%;
           padding-top: 2.5px;
           flex-direction: row;
           align-items: center;
@@ -281,5 +284,9 @@
         }
       }
     }
+  }
+
+  &:hover {
+    background: ghostwhite;
   }
 }
