--- a/web_client/src/assets/styles/views/layout/main.scss
+++ b/web_client/src/assets/styles/views/layout/main.scss
@@ -5,8 +5,8 @@
   display: grid;
   grid-template-areas: "left center right";
   grid-template-columns: clamp(30px, 30%, 150px) 1fr clamp(80px, 30%, 250px) 0;
-  margin-left: clamp(2.5%, 25%, 80px);
-  margin-right: clamp(2.5%, 25%, 80px);
+  margin-left: 5%;
+  margin-right: 5%;
   min-height: 100%;
   border-left: 2px solid gainsboro;
   border-right: 2px solid gainsboro;
@@ -125,6 +125,7 @@
 
 .nav-btn {
   display: flex;
+  box-sizing: content-box;
   width: calc(100% - 2 * 2.5px - 2 * 5px);
   margin: 2.5px;
   padding: 0 5px;
@@ -268,7 +269,7 @@
 @media (max-width: 750px) {
   .main-layout {
     grid-template-areas: "left center";
-    grid-template-columns: clamp(30px, 30%, 150px) 1fr 0;
+    grid-template-columns: clamp(30px, 30%, 150px) 1fr;
 
     > .center-pane {
       border-right: none;
@@ -310,13 +311,14 @@
   }
 
   .nav-btn {
+    justify-content: center;
     > span {
-      padding: 2.5px;
+      padding: 3px;
       border-radius: 20px;
 
       > svg {
-        width: 30px;
-        height: 30px;
+        width: 28px;
+        height: 28px;
       }
       > b {
         display: none;
@@ -346,7 +348,7 @@
 @media (max-width: 450px) {
   .main-layout {
     grid-template-areas: "left center";
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 50px calc(100% - 50px);
     margin: 0 15px;
 
     > .left-pane {
@@ -365,6 +367,7 @@
     }
 
     > .center-pane {
+      // width: calc(100% - 15px);
       border-right: none;
     }
   }
@@ -373,7 +376,12 @@
 @media (max-width: 350px) {
   .main-layout {
     grid-template-areas: "left center";
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 50px calc(100% - 50px);
     margin: 0 10px;
+  }
+
+  > .center-pane {
+    // width: calc(100% - 5px);
+    border-right: none;
   }
 }
