Update Poem component style

--- a/web_client/src/assets/styles/components/poem.scss
+++ b/web_client/src/assets/styles/components/poem.scss
@@ -24,6 +24,7 @@
 
       &.header {
         display: grid;
+        width: calc(100% - 2 * 5px);
         padding: 5px;
         grid-template-columns: auto 1fr auto;
         align-items: center;
